--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,14 +2,14 @@
 $blue: #2d68f4;
 $indigo: #6610f2;
 $purple: #6f42c1;
-$pink: #ec0f76;
+$pink: #e10e71;
 $red: #df2935;
 $orange: #ff6f22;
 $yellow: #f3b234;
 $green: #02c996;
 $teal: #20c997;
 $cyan: #5bc0de;
-$white: #fff;
+$white: #f9f9f9;
 $gray-100: #f9f9f9;
 $gray-200: #f5f5f5;
 $gray-300: #e9e9e9;
@@ -18,8 +18,9 @@ $gray-500: #9e9e9e;
 $gray-600: #868e96;
 $gray-700: #585858;
 $gray-800: #3e3e3e;
+$gray-850: #303030;
 $gray-900: #232323;
-$black: #000;
+$black: #171717;
 $grays: (
   100: $gray-100,
   200: $gray-200,
@@ -29,16 +30,17 @@ $grays: (
   600: $gray-600,
   700: $gray-700,
   800: $gray-800,
+  850: $gray-850,
   900: $gray-900
 );
 $theme-colors: (
-  primary: $blue,
-  secondary: $gray-600,
+  primary: $pink,
+  secondary: $blue,
   success: $green,
   info: $cyan,
   warning: $yellow,
   danger: $red,
-  light: $gray-100,
+  light: $gray-200,
   dark: $gray-900
 );
 $colors: (
